# Peinto

./: CMakeLists.txt  README.md  SDL2Config.cmake
src/: CMakeLists.txt  application.cpp  application.h  bresenham.cpp  bresenham.h  draw.cpp  draw.h  framework.cpp  framework.h  gui.cpp  gui.h  image.cpp  image.h  main.cpp  platform.h  utils.cpp  utils.h
